--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 /* Sylwia's Style Sheet */
+
+
 /* Web Fonts ----------*/
 
 @font-face {
@@ -16,17 +18,18 @@
     src: url('../fonts/texgyreadventor-bold.otf');
 }
 
+
 /* Base Styles ---------*/
 
 body {
-    background-color: #6ec4f1;
+    background-color: #6ec4f1 !important;
     margin: 0;
     overflow-x: hidden !important;
     padding: 0 2em 8em 2em;
 }
 
 p {
-    font-family: "Myriad Pro";
+    font-family: "Myriad Pro" !important;
     font-size: 14px;
 }
 
@@ -38,6 +41,7 @@ p {
     color: #fff;
 }
 
+
 /*========Header==========*/
 
 .blue-wrapper {
@@ -45,8 +49,7 @@ p {
     padding: 1em 2em 1em 2em;
     background-color: #3999cc;
     margin-top: 0;
-    background: repeating-linear-gradient(135deg, 
-        #3987b0, #3987b0 .015em, #3999cc 0, #3999cc .25em);
+    background: repeating-linear-gradient(135deg, #3987b0, #3987b0 .015em, #3999cc 0, #3999cc .25em);
 }
 
 .white-wrapper {
@@ -58,7 +61,7 @@ p {
     max-width: 100% !important;
     height: auto !important;
     margin-bottom: 0px !important;
-    display: block;
+    display: block !important;
 }
 
 h1 {
@@ -69,21 +72,23 @@ h1 {
     top: 5px;
     text-align: center;
     text-transform: uppercase;
-    color: #fff;
+    color: #fff !important;
     font-size: 20px;
     -webkit-appearance: none;
     -webkit-appearance: none;
-    font-family: 'Gyre';
+    font-family: 'Gyre' !important;
+    font-weight: normal;
     margin-top: 0;
 }
 
 h3 {
-    font-family: 'Myriad Pro';
-    color: #488eb6;
+    font-family: 'Myriad Pro' !important;
+    color: #488eb6 !important;
     font-size: 12px;
     text-transform: uppercase;
     -webkit-appearance: none;
 }
+
 
 /* List */
 
@@ -97,7 +102,6 @@ ul {
     list-style: none;
     background-repeat: no-repeat;
     display: inline;
-
 }
 
 li {
@@ -107,6 +111,9 @@ li {
     font-family: 'Myriad Pro';
     font-size: 14px;
 }
+
+
+/*input, textarea, fieldset {-webkit-appearance: none; !important; }:-webkit-autofill { color: #fff !important; }
 
 .input-content {
     position: abolute;
@@ -120,40 +127,39 @@ li {
 *, *:before, *:after {
     box-sizing: inherit;
 }
-}
+}*/
 
-input, textarea, fieldset {-webkit-appearance: none; !important; }
-:-webkit-autofill { color: #fff !important; }
-
-input[type=text], select {
-    width: 100%;
+input[type=text],
+select {
+    width: 25em;
     padding: 10px 20px;
     margin: 8px 0;
-    display: inline-block;
+    display: block;
     border: 1px solid black;
     border-radius: 4px;
     box-sizing: border-box;
     -moz-box-shadow: inset 0 0 4px #000000;
-   -webkit-box-shadow: inset 0 0 4px #000000;
-   box-shadow: inset 0 0 4px #000000;
+    -webkit-box-shadow: inset 0 0 4px #000000;
+    box-shadow: inset 0 0 4px #000000;
 }
 
-input[type=email], select {
-    width: 100%;
-    padding: 12px 20px;
+input[type=email],
+select {
+    width: 25em;
+    padding: 10px 20px;
     margin: 8px 0;
-    display: inline-block;
+    display: block;
     border: 1px solid black;
     border-radius: 4px;
     box-sizing: border-box;
-     -moz-box-shadow: inset 0 0 4px #000000 !important;
-   -webkit-box-shadow: inset 0 0 4px #000000 !important;
-   box-shadow: inset 0 0 4px #000000 !important;
+    -moz-box-shadow: inset 0 0 4px #000000 !important;
+    -webkit-box-shadow: inset 0 0 4px #000000 !important;
+    box-shadow: inset 0 0 4px #000000 !important;
 }
 
 label {
     text-transform: uppercase;
-    font-family: 'Avenir';
+    font-family: 'Avenir' !important;
 }
 
 -moz-placeholder {
@@ -166,11 +172,10 @@ label {
 
 .form-column {
     position: relative;
-    display: inline-block;
+    display: block;
     padding: 1em 0em 1em 0em;
     vertical-align: top;
-    background: repeating-linear-gradient(135deg, 
-        #cfcfcf, #cfcfcf .015em, white 0, white .25em);
+    background: repeating-linear-gradient(135deg, #cfcfcf, #cfcfcf .015em, white 0, white .25em);
 }
 
 .more-info-link {
@@ -178,13 +183,14 @@ label {
     font-size: 12px;
 }
 
+
 /* Banner Slogans */
 
 .upper-slogan {
     text-transform: uppercase;
     color: #fff;
     text-align: center;
-    font-family: 'Avenir';
+    font-family: 'Avenir' !important;
     font-size: 22px;
 }
 
@@ -197,7 +203,7 @@ label {
     text-transform: uppercase;
     color: #fff;
     text-align: center;
-    font-family: 'Myriad Pro';
+    font-family: 'Myriad Pro' !important;
     font-size: 24px;
 }
 
@@ -207,7 +213,7 @@ label {
 }
 
 .icon {
-   font-size: 10px; 
+    font-size: 10px;
     vertical-align: middle;
     padding: 1em 1em 1em 1em;
 }
@@ -217,6 +223,7 @@ label {
     font-size: 10px;
     font-weight: bold;
 }
+
 
 /* Submit Button ------*/
 
@@ -242,20 +249,102 @@ label {
     background-color: #6ec4f1;
 }
 
-/*=============Responsive Grid====================*/
 
-@media screen 
-  and (min-device-width: 768px) 
-  and (max-device-width: 1600px) 
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (min-resolution: 192dpi) { 
-      #header img {
-          align-content: center;
-          position: relative;
-          display:table;
-      }
-      h1 {
-          max-width: 768px;
-          font-size: 60px;
-      }
+/*=============Responsive Styles====================*/
+
+@media (min-width:768px) and (max-width:1281px) {
+    #header img {
+        align-content: center;
+        margin-left: 10em !important;
+        background-attachment: fixed;
+        background-position: center center;
+    }
+    h1 {
+        max-width: 768px !important;
+        font-size: 50px !important;
+        margin-left: 6em !important;
+        text-align: center !important;
+        font-weight: 100 !important;
+    }
+    p {
+        padding-left: 1em !important;
+        padding-right: 1em !important;
+        padding-bottom: 1em;
+        font-size: 18px !important;
+    }
+    .blue-wrapper {
+        width: 947px;
+        margin-left: 10em;
+    }
+    .white-wrapper {
+        margin-top: -0.5em;
+        margin-left: 1.5em;
+        margin-right: 1.5em;
+    }
+    .lightblue-banner {
+        margin-left: -0.25em;
+        margin-right: -0.25em;
+    }
+    .upper-slogan {
+        font-size: 28px;
+        margin: 0;
+        letter-spacing: 1.5px;
+    }
+    .features-list {
+        padding-left: 1em;
+        padding-right: 1em;
+    }
+    li {
+        font-size: 18px !important;
+    }
+    .icon {
+        padding-right: 3em;
+    }
+    h3 {
+        font-size: 14px !important;
+        padding-left: 10em !important;
+        padding-right: 10em !important;
+        padding-bottom: 2em !important;
+        margin-top: 0 !important;
+    }
+    .darkblue-banner {
+        margin-left: -0.25em;
+        margin-right: -0.25em;
+    }
+    .lower-slogan {
+        font-size: 34px;
+        margin: 0;
+        padding: 0.5em 0.5em;
+        letter-spacing: 1px;
+        font-weight: 200;
+    }
+    .form-column {
+        margin-top: 2em;
+        max-width: 830px;
+    }
+    .far-column {
+        margin-left: -12em;
+    }
+    #provider {
+        margin-top: 8px;
+    }
+    .offers-check {
+        padding: 2em;
+        font-size: 12px;
+    }
+    .privacy {
+        clear: left;
+        display: block;
+        margin-left: 2em;
+    }
+    .button-submit {
+        width: 25%;
+        margin-left: 2em;
+        margin-top: 2em;
+    }
+    .fine-print {
+        padding-left: 5em;
+        padding-right: 5em;
+        padding-top: 1em;
+    }
 }
