--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,12 @@
 
 /* Base Styles ---------*/
 
+.container {
+    margin: 0 auto !important;
+    max-width: 1280px !important;
+    width: 90% !important;
+}
+
 body {
     background-color: #6ec4f1 !important;
     overflow-x: hidden !important;
@@ -72,7 +78,7 @@ p {
 
 .header {
     background:url(../images/resort.jpg);
-    background-size: cover !important;
+    background-size: 100% auto !important;
     -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -83,9 +89,27 @@ p {
     margin-top: 0;
     background-position: center center;
     background-repeat: no-repeat;
-    
     min-height: 519px;
     z-index: 900;
+    display: flex;
+}
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 667px) {
+    #header {
+        background-image: url(../images/resort-mobile.jpg) !important;
+        max-width: 100% !important;
+    height: auto !important;
+    margin-bottom: 0px !important;
+    margin-right: -5em !important;
+    float: none !important;
+    display: block !important;
+    }
+    .screen-only {
+        display: none;
+    }
+    .mobile-only {
+        display: block;
+    }
 }
 
 h1 {
@@ -94,7 +118,7 @@ h1 {
     max-width: auto !important;
     z-index: 100 !important;
     top: 5px;
-    text-align: center;
+    text-align: center !important;
     text-transform: uppercase;
     color: #fff !important;
     font-size: 24px !important;
@@ -103,7 +127,7 @@ h1 {
     font-family: 'Gyre' !important;
     font-weight: normal;
     margin-top: 0;
-    margin-left: 3.5em !important;
+    margin-left: 3em !important;
 }
 
 h3 {
@@ -137,23 +161,6 @@ li {
     font-size: 14px;
 }
 
-
-/*input, textarea, fieldset {-webkit-appearance: none; !important; }:-webkit-autofill { color: #fff !important; }
-
-.input-content {
-    position: abolute;
-    background: #FFFFFF;
-    box-shadow: 0px 1px 2px 0 rgba(34, 36, 38, 0.15);
-    margin: 1rem 0em;
-    padding: 1em 1em;
-    border-radius: 0.28571429rem;
-    border: 1px solid rgba(34, 36, 38, 0.15);
-}
-*, *:before, *:after {
-    box-sizing: inherit;
-}
-}*/
-
 input[type=text],
 select {
     width: 25em;
@@ -180,6 +187,12 @@ select {
     -moz-box-shadow: inset 0 0 4px #000000 !important;
     -webkit-box-shadow: inset 0 0 4px #000000 !important;
     box-shadow: inset 0 0 4px #000000 !important;
+}
+
+input[type="checkbox"] {
+    float: left;
+    margin: 0 !important;
+    position: relative !important;
 }
 
 label {
@@ -309,7 +322,6 @@ label {
     h1 {
         max-width: 768px !important;
         font-size: 50px !important;
-        margin-left: 6.5em !important;
         text-align: center !important;
         font-weight: 100 !important;
     }
